err/euston.err
Listing '.'...
Listing './bin'...
Compiling './bin/es_cellmultiply.py'...
***   File "./bin/es_cellmultiply.py", line 86
    print 'Please specify either the H matrix or lattice constants unless input and output are scaled.'
                                                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/es_cp2k2xyz.py'...
***   File "./bin/es_cp2k2xyz.py", line 51
    print 'Unable to find cell information. Aborting.'
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/es_cp2kperf.py'...
***   File "./bin/es_cp2kperf.py", line 19
    print 'Number of cores:     {0:>25}'.format(cores)
                                       ^
SyntaxError: invalid syntax

Compiling './bin/es_cp2kpretty.py'...
Compiling './bin/es_fitting.py'...
***   File "./bin/es_fitting.py", line 53
    print 'Reading cubefile...                 ',
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/es_phscan.py'...
***   File "./bin/es_phscan.py", line 31
    print 'Please specify either the H matrix or lattice constants unless input and output are scaled.'
                                                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/es_projectcube.py'...
***   File "./bin/es_projectcube.py", line 63
    print 'Reading cubefile...                 ',
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/es_wrapcube.py'...
***   File "./bin/es_wrapcube.py", line 46
    print 'Reading cubefile...                 ',
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/euston'...
Compiling './lib/python3.5/site-packages/euston/io.py'...
***   File "./lib/python3.5/site-packages/euston/io.py", line 200
    print 'Warning: Only keeping last run.'
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/euston-0.1a1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
